<resources>
    <string name="app_name">AnagramZ</string>
    <string name="registrationNameSurname">Roman Lapa</string>
    <string name="registrationEmail">adella@gmail.com</string>
    <string name="registrationPassword">Password</string>
    <string name="registrationRepeatPassword">Repeat password</string>
    <string name="registerButton">Register</string>
    <string name="registerWithSocialNetTv">Or register with social networks</string>
    <string name="someListTv">Already have an account?</string>
    <string name="facebook_app_id">1</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="signInWithFacebook">Sign in with Facebook</string>
    <string name="facebookPermissions">AnagramZ can get following information from your Facebook account:public profile,friend list,email address, your birthday and your sympathies.</string>
    <string name="noPublishingApproval">We wont publish anything without your approval.</string>
    <string name="play">Play</string>
    <string name="allRightsReserved">&#169; Conceveo Digital 2015.All rights reserved.</string>
    <string name="namesAndWords">Names and words</string>
    <string name="numbersAndDates">Numbers and dates</string>
    <string name="choseOneCategory">Chose one category.</string>
    <string name="allYouHaveToDo">All you have to do is chose.</string>
    <string name="register">Registration</string>
    <string name="questionDefault">Some question.</string>
    <string name="questionAnswerDefault">. . . .(4)</string>
    <string name="numbersAndDatesHint">Touch numbers in chronological order.</string>
    <string name="namesAndWordsHint">Touch characters in chronological order.</string>
    <string name="typeChangeButton">Change question type.</string>
    <string name="pointsPerQuestion">+4</string>
    <string name="points">Points</string>
    <string name="stageCompleteCongratz">Congratulations! You have obtained a badge.</string>
    <string name="basicLevelComplete">Congratulations! You have completed the basic level.And you are promoted to the next level.</string>
    <string name="championLevelComplete">Congratulations! You have completed the Champion level.Yau are promoted to the next level.</string>
    <string name="superStarLevelComplete">Congratulations! You have completed the Superstar level.And now you are promoted to the next level.</string>
    <string name="sendYourResults">Send your results</string>
    <string name="continuePlaying">Continue playing</string>
    <string name="settings">Settings</string>
    <string name="choseDifficulty">Chose difficulty</string>
    <string name="chronometer">Chronometer</string>
    <string name="mode">Mode</string>
    <string name="inviteFriend">Invite friend</string>
    <string name="noBadges">You dont have any badges</string>
    <string name="signIn">Sign in</string>
    <string name="signInToRegister">Not registered?</string>
    <string name="basic">Basic</string>
    <string name="champion">Champion</string>
    <string name="superstar">Superstar</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="offline">Offline</string>
    <string name="duel_two_palyers">Duel (2 players)</string>
    <string name="mode_duel">mode duel</string>
    <string name="subscribeDialogWarning">
To enter duel mode you need to subscribe to 712.You will be redirected to message app to subscribe.</string>
    <string name="proceed">Proceed</string>
    <string name="duelLostText">O la la!\nYou have lost a duel.</string>
    <string name="startNewDuel">Start new duel</string>
    <string name="quitDuelMode">Quit duel mode</string>
    <string name="buyMoreDuels">You are out of duels, you will be redirected to messages app to finish subscription.</string>
    <string name="share">Share AnagramZ</string>
    <string name="APP_ID">929237293797399</string>
    <string name="twitter_consumer_key">4gBAR4k8l1SGjJjccAhfdK5rx</string>
    <string name="twitter_consumer_secret">yQL3gJslwdzzn7I9HoP8pzjnWegEOpGr7b9JTdi1JWv26bXxf1</string>
    <string name="TWITTER_CALLBACK_URL"></string>
    <string name="answer">Great job answer :</string>
    <string name="badges">badges</string>
    <string name="linkToShareImage">https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTXvWrFjGr2vjQL4HgE-weMms4nJwBCR7kTdJFMNA_DMWGFSFKjOw</string>

</resources>
