<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/basic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/basic"
        android:textColor="@color/editTextColor"
        android:drawableRight="@drawable/check_box_selector"
        android:button="@null"
        android:layout_marginLeft="75dp"
        android:padding="5dp" />

    <CheckBox
        android:id="@+id/champion"
        android:layout_below="@id/basic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/champion"
        android:button="@null"
        android:textColor="@color/editTextColor"
        android:drawableRight="@drawable/check_box_selector"
        android:layout_marginLeft="75dp"
        android:padding="5dp" />

    <CheckBox
        android:id="@+id/superstar"
        android:layout_below="@id/champion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/superstar"
        android:button="@null"
        android:textColor="@color/editTextColor"
        android:drawableRight="@drawable/check_box_selector"
        android:layout_marginLeft="75dp"
        android:padding="5dp" />

</LinearLayout>